--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             font-size: 0.78rem;
         }
 
-        .refresh-btn {
+        .refresh-btn, .logout-btn {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -207,6 +207,13 @@
             box-shadow: 0 0 16px var(--glow-accent);
         }
 
+        .logout-btn:hover {
+            background: rgba(248, 113, 113, 0.2);
+            border-color: rgba(248, 113, 113, 0.35);
+            color: var(--red);
+            box-shadow: 0 0 16px rgba(248, 113, 113, 0.2);
+        }
+
         .refresh-btn.spinning svg {
             animation: spin 0.6s linear;
         }
@@ -216,7 +223,7 @@
             to { transform: rotate(360deg); }
         }
 
-        .refresh-btn svg { width: 20px; height: 20px; }
+        .refresh-btn svg, .logout-btn svg { width: 20px; height: 20px; }
 
         /* -------- Quota Grid -------- */
         .quota-container {
@@ -400,6 +407,13 @@
                     <path d="M3.51 9a9 9 0 0114.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0020.49 15"></path>
                 </svg>
             </button>
+            <button class="logout-btn" onclick="doLogout()" title="Sign out">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M9 21H5a2 2 0 01-2-2V5a2 2 0 012-2h4"></path>
+                    <polyline points="16 17 21 12 16 7"></polyline>
+                    <line x1="21" y1="12" x2="9" y2="12"></line>
+                </svg>
+            </button>
         </div>
     </div>
 
@@ -545,6 +559,19 @@
         btn.classList.add('spinning');
         await fetchQuota();
         setTimeout(() => btn.classList.remove('spinning'), 600);
+    }
+
+    // --- Logout ---
+    async function doLogout() {
+        showLoading(true);
+        try {
+            await fetch('/api/logout', { method: 'POST' });
+        } catch (e) {
+            // Proceed to login screen regardless
+        }
+        stopAutoRefresh();
+        showLoading(false);
+        showLogin();
     }
 
     // --- UI Helpers ---
