--- a/index.html
+++ b/index.html
@@ -374,6 +374,41 @@
             color: var(--text-muted);
         }
 
+        /* -------- Connection Status Dot -------- */
+        .conn-status {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.4rem;
+            font-size: 0.78rem;
+            color: var(--text-muted);
+        }
+
+        .conn-dot {
+            width: 8px; height: 8px;
+            border-radius: 50%;
+            background: var(--text-muted);
+            transition: background 0.3s;
+        }
+
+        .conn-dot.connected { background: var(--green); box-shadow: 0 0 6px var(--green); }
+        .conn-dot.reconnecting { background: var(--yellow); box-shadow: 0 0 6px var(--yellow); animation: pulse-dot 1s ease-in-out infinite; }
+        .conn-dot.disconnected { background: var(--red); box-shadow: 0 0 6px var(--red); }
+
+        @keyframes pulse-dot {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.4; }
+        }
+
+        /* -------- Value Changed Highlight -------- */
+        @keyframes value-flash {
+            0% { color: var(--accent-bright); }
+            100% { color: inherit; }
+        }
+
+        .value-changed {
+            animation: value-flash 0.8s ease-out;
+        }
+
         /* -------- Loading / Error States -------- */
         .loading-overlay {
             display: none;
@@ -460,34 +495,35 @@
         </div>
     </div>
 
-    <!-- Dashboard -->
-    <div id="dashboard">
-        <div class="top-bar">
-            <div class="brand">
-                <span class="icon">🚀</span>
-                <h2>Antigravity Quota Watcher</h2>
-            </div>
-            <div class="right-section">
-                <span class="tier-badge" id="tier-badge" style="display:none;"></span>
-                <span class="last-updated" id="last-updated"></span>
-                <button class="refresh-btn" onclick="manualRefresh()" title="Refresh quota">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <polyline points="23 4 23 10 17 10"></polyline>
-                        <polyline points="1 20 1 14 7 14"></polyline>
-                        <path d="M3.51 9a9 9 0 0114.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0020.49 15"></path>
-                    </svg>
-                </button>
-                <button class="logout-btn" onclick="doLogout()" title="Sign out">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <path d="M9 21H5a2 2 0 01-2-2V5a2 2 0 012-2h4"></path>
-                        <polyline points="16 17 21 12 16 7"></polyline>
-                        <line x1="21" y1="12" x2="9" y2="12"></line>
-                    </svg>
-                </button>
-            </div>
+<!-- Dashboard -->
+<div id="dashboard">
+    <div class="top-bar">
+        <div class="brand">
+            <span class="icon">🚀</span>
+            <h2>Antigravity Quota Watcher</h2>
         </div>
+        <div class="right-section">
+            <span class="tier-badge" id="tier-badge" style="display:none;"></span>
+            <span class="conn-status">
+                <span class="conn-dot" id="conn-dot"></span>
+                <span id="last-updated"></span>
+            </span>
+            <button class="refresh-btn" onclick="manualRefresh()" title="Refresh quota">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="23 4 23 10 17 10"></polyline>
+                    <polyline points="1 20 1 14 7 14"></polyline>
+                    <path d="M3.51 9a9 9 0 0114.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0020.49 15"></path>
+                </svg>
+            </button>
+            <button class="logout-btn" onclick="doLogout()" title="Sign out">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M9 21H5a2 2 0 01-2-2V5a2 2 0 012-2h4"></path>
+                    <polyline points="16 17 21 12 16 7"></polyline>
+                    <line x1="21" y1="12" x2="9" y2="12"></line>
+                </svg>
+            </button>
+        </div>
+    </div>
 
         <div class="quota-container">
             <div class="quota-grid" id="quota-grid"></div>
@@ -502,29 +538,35 @@
     <!-- Error Toast -->
     <div class="error-toast" id="error-toast"></div>
 
-    <script>
-        let eventSource = null;
+<script>
+    let ws = null;
+    let reconnectTimer = null;
+    let reconnectDelay = 1000;
+    const MAX_RECONNECT_DELAY = 10000;
+    let isFirstRender = true;
+    let lastData = null;  // Track previous state for diffing
 
-        // --- Lifecycle ---
-        async function init() {
-            try {
-                const res = await fetch('/api/status');
-                const data = await res.json();
-                if (data.authenticated) {
-                    showDashboard();
-                    connectSSE();
-                } else {
-                    showLogin();
-                }
-            } catch (e) {
+    // --- Lifecycle ---
+    async function init() {
+        try {
+            const res = await fetch('/api/status');
+            const data = await res.json();
+            if (data.authenticated) {
+                showDashboard();
+                connectWebSocket();
+            } else {
                 showLogin();
             }
+        } catch (e) {
+            showLogin();
         }
+    }
 
-        function showLogin() {
-            document.getElementById('login-screen').style.display = 'flex';
-            document.getElementById('dashboard').style.display = 'none';
-        }
+    function showLogin() {
+        document.getElementById('login-screen').style.display = 'flex';
+        document.getElementById('dashboard').style.display = 'none';
+        closeWebSocket();
+    }
 
         function showDashboard() {
             document.getElementById('login-screen').style.display = 'none';
@@ -537,133 +579,224 @@
             window.location.href = '/api/login';
         }
 
-        // --- SSE Connection ---
-        function connectSSE() {
-            disconnectSSE();
-            eventSource = new EventSource('/api/quota/stream');
+    // --- WebSocket Connection ---
+    function connectWebSocket() {
+        if (ws && (ws.readyState === WebSocket.OPEN || ws.readyState === WebSocket.CONNECTING)) {
+            return;
+        }
 
-            eventSource.onmessage = (event) => {
-                try {
-                    const data = JSON.parse(event.data);
-                    renderQuota(data);
-                } catch (e) {
-                    showError('Failed to parse quota data.');
-                }
-            };
+        const proto = location.protocol === 'https:' ? 'wss:' : 'ws:';
+        ws = new WebSocket(`${proto}//${location.host}/ws/quota`);
+        setConnStatus('reconnecting');
 
-            eventSource.addEventListener('auth_error', () => {
-                disconnectSSE();
+        ws.onopen = () => {
+            reconnectDelay = 1000;
+            setConnStatus('connected');
+        };
+
+        ws.onmessage = (event) => {
+            const data = JSON.parse(event.data);
+            if (data.error === 'not_authenticated') {
                 showLogin();
                 showError('Session expired. Please sign in again.');
-            });
-
-            eventSource.onerror = () => {
-                // EventSource will auto-reconnect, show a brief notice
-                showError('Connection lost. Reconnecting…');
-            };
-        }
-
-        function disconnectSSE() {
-            if (eventSource) {
-                eventSource.close();
-                eventSource = null;
+                return;
             }
-        }
+            renderQuota(data);
+        };
 
-        // --- One-shot fetch for manual refresh ---
-        async function fetchQuota() {
-            try {
-                const res = await fetch('/api/quota');
-                if (res.status === 401) {
-                    disconnectSSE();
-                    showLogin();
-                    showError('Session expired. Please sign in again.');
-                    return;
-                }
-                const data = await res.json();
-                renderQuota(data);
-            } catch (e) {
-                showError('Failed to fetch quota.');
+        ws.onclose = (event) => {
+            if (event.code === 4001) {
+                // Auth failure — don't reconnect
+                setConnStatus('disconnected');
+                return;
             }
-        }
+            setConnStatus('disconnected');
+            scheduleReconnect();
+        };
 
-        function renderQuota(data) {
-            // Tier badge
-            const badge = document.getElementById('tier-badge');
-            if (data.tier) {
-                badge.textContent = data.tier;
-                badge.style.display = 'inline-block';
-            } else {
-                badge.style.display = 'none';
-            }
+        ws.onerror = () => {
+            // onclose will fire after this
+        };
+    }
+
+    function closeWebSocket() {
+        if (reconnectTimer) {
+            clearTimeout(reconnectTimer);
+            reconnectTimer = null;
+        }
+        if (ws) {
+            ws.onclose = null; // prevent auto-reconnect
+            ws.close();
+            ws = null;
+        }
+        setConnStatus('disconnected');
+    }
+
+    function scheduleReconnect() {
+        if (reconnectTimer) return;
+        setConnStatus('reconnecting');
+        reconnectTimer = setTimeout(() => {
+            reconnectTimer = null;
+            reconnectDelay = Math.min(reconnectDelay * 2, MAX_RECONNECT_DELAY);
+            connectWebSocket();
+        }, reconnectDelay);
+    }
+
+    function setConnStatus(status) {
+        const dot = document.getElementById('conn-dot');
+        if (!dot) return;
+        dot.className = 'conn-dot ' + status;
+    }
+
+    // --- Smooth Diffing Render ---
+    function renderQuota(data) {
+        // Tier badge
+        const badge = document.getElementById('tier-badge');
+        if (data.tier) {
+            badge.textContent = data.tier;
+            badge.style.display = 'inline-block';
+        } else {
+            badge.style.display = 'none';
+        }
 
             // Update timestamp
             document.getElementById('last-updated').textContent = 'Updated ' + new Date().toLocaleTimeString();
 
-            // Render model cards
-            const grid = document.getElementById('quota-grid');
+        const grid = document.getElementById('quota-grid');
+        const models = data.models || {};
+        const entries = Object.entries(models);
+
+        if (entries.length === 0) {
+            grid.innerHTML = '<p style="color: var(--text-muted); grid-column: 1/-1; text-align:center; padding:3rem 0;">No model quota data available.</p>';
+            lastData = data;
+            isFirstRender = true;
+            return;
+        }
+
+        // First render OR model list changed — full build
+        const prevModels = lastData ? Object.keys(lastData.models || {}) : [];
+        const currModels = Object.keys(models);
+        const modelListChanged = prevModels.length !== currModels.length ||
+            currModels.some(k => !prevModels.includes(k));
+
+        if (isFirstRender || modelListChanged) {
             grid.innerHTML = '';
-
-            const models = data.models || {};
-            const entries = Object.entries(models);
-
-            if (entries.length === 0) {
-                grid.innerHTML = '<p style="color: var(--text-muted); grid-column: 1/-1; text-align:center; padding:3rem 0;">No model quota data available.</p>';
-                return;
-            }
-
             entries.forEach(([name, info], i) => {
-                const pct = info.remaining_percent;
-                const resetText = info.reset_text || '';
+                const card = buildCard(name, info, i);
+                grid.appendChild(card);
+            });
+            isFirstRender = false;
+            lastData = data;
+            return;
+        }
+
+        // Subsequent renders — diff and update in-place
+        entries.forEach(([name, info]) => {
+            const card = document.getElementById('card-' + name);
+            if (!card) return;
+
+            const prevInfo = (lastData.models || {})[name];
+            const pct = info.remaining_percent;
+            const resetText = info.reset_text || '';
 
                 let colorClass = 'high';
                 if (pct <= 0) colorClass = 'low';
                 else if (pct < 30) colorClass = 'low';
                 else if (pct < 60) colorClass = 'medium';
 
-                const card = document.createElement('div');
-                card.className = 'quota-card';
-                card.style.animationDelay = `${i * 0.06}s`;
+            const fillClass = pct <= 0 ? 'depleted' : colorClass;
+            const fillWidth = pct <= 0 ? 100 : pct;
 
-                const fillClass = pct <= 0 ? 'depleted' : colorClass;
-                const fillWidth = pct <= 0 ? '100' : pct.toFixed(1);
+            // Update progress bar
+            const fill = card.querySelector('.progress-fill');
+            fill.className = 'progress-fill ' + fillClass;
+            fill.style.width = fillWidth.toFixed(1) + '%';
 
-                card.innerHTML = `
-                <div class="model-name">${info.display_name || name}</div>
-                <div class="progress-track">
-                    <div class="progress-fill ${fillClass}" style="width: ${fillWidth}%"></div>
-                </div>
-                <div class="quota-meta">
-                    <span class="quota-percent ${colorClass}">
-                        ${pct <= 0 ? 'Depleted' : pct.toFixed(1) + '% remaining'}
-                    </span>
-                    <span class="quota-reset">${resetText}</span>
-                </div>
-            `;
-                grid.appendChild(card);
-            });
-        }
-
-        // --- Manual refresh ---
-        async function manualRefresh() {
-            const btn = document.querySelector('.refresh-btn');
-            btn.classList.add('spinning');
-            await fetchQuota();
-            setTimeout(() => btn.classList.remove('spinning'), 600);
-        }
-
-        // --- Logout ---
-        async function doLogout() {
-            showLoading(true);
-            try {
-                await fetch('/api/logout', { method: 'POST' });
-            } catch (e) {
-                // Proceed to login screen regardless
+            // Update percent text
+            const pctEl = card.querySelector('.quota-percent');
+            const newPctText = pct <= 0 ? 'Depleted' : pct.toFixed(1) + '% remaining';
+            if (pctEl.textContent.trim() !== newPctText) {
+                pctEl.textContent = newPctText;
+                pctEl.className = 'quota-percent ' + colorClass;
+                flashElement(pctEl);
             }
-            disconnectSSE();
-            showLoading(false);
-            showLogin();
+
+            // Update reset text
+            const resetEl = card.querySelector('.quota-reset');
+            if (resetEl.textContent !== resetText) {
+                resetEl.textContent = resetText;
+            }
+        });
+
+        lastData = data;
+    }
+
+    function buildCard(name, info, index) {
+        const pct = info.remaining_percent;
+        const resetText = info.reset_text || '';
+
+        let colorClass = 'high';
+        if (pct <= 0) colorClass = 'low';
+        else if (pct < 30) colorClass = 'low';
+        else if (pct < 60) colorClass = 'medium';
+
+        const fillClass = pct <= 0 ? 'depleted' : colorClass;
+        const fillWidth = pct <= 0 ? '100' : pct.toFixed(1);
+
+        const card = document.createElement('div');
+        card.className = 'quota-card';
+        card.id = 'card-' + name;
+        card.style.animationDelay = `${index * 0.06}s`;
+
+        card.innerHTML = `
+            <div class="model-name">${info.display_name || name}</div>
+            <div class="progress-track">
+                <div class="progress-fill ${fillClass}" style="width: ${fillWidth}%"></div>
+            </div>
+            <div class="quota-meta">
+                <span class="quota-percent ${colorClass}">
+                    ${pct <= 0 ? 'Depleted' : pct.toFixed(1) + '% remaining'}
+                </span>
+                <span class="quota-reset">${resetText}</span>
+            </div>
+        `;
+        return card;
+    }
+
+    function flashElement(el) {
+        el.classList.remove('value-changed');
+        // Force reflow to restart animation
+        void el.offsetWidth;
+        el.classList.add('value-changed');
+    }
+
+    // --- Manual refresh ---
+    function manualRefresh() {
+        const btn = document.querySelector('.refresh-btn');
+        btn.classList.add('spinning');
+        if (ws && ws.readyState === WebSocket.OPEN) {
+            ws.send('refresh');
+        } else {
+            // Fallback: try reconnecting
+            connectWebSocket();
         }
+        setTimeout(() => btn.classList.remove('spinning'), 600);
+    }
+
+    // --- Logout ---
+    async function doLogout() {
+        showLoading(true);
+        closeWebSocket();
+        try {
+            await fetch('/api/logout', { method: 'POST' });
+        } catch (e) {
+            // Proceed to login screen regardless
+        }
+        showLoading(false);
+        isFirstRender = true;
+        lastData = null;
+        showLogin();
+    }
 
         // --- UI Helpers ---
         function showLoading(show) {
